tests/transpiler/x/zig/bool_chain.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/bool_chain.zig:10:62: error: ambiguous use of '&&'; use 'and' for logical AND, or change whitespace to ' & &' for bitwise AND
    try std.io.getStdOut().writer().print("{any}\n", .{1 < 2 && 2 < 3 && 3 < 4});
                                                             ^
