tests/transpiler/x/zig/bool_chain.zig
// Generated by Mochi Zig transpiler on 2025-07-21 10:57 +0000
const std = @import("std");

fn boom() bool {
    try std.io.getStdOut().writer().print("{s}\n", .{"boom"});
    return true;
}

pub fn main() void {
    try std.io.getStdOut().writer().print("{any}\n", .{1 < 2 && 2 < 3 && 3 < 4});
    try std.io.getStdOut().writer().print("{any}\n", .{1 < 2 && 2 > 3 && boom()});
    try std.io.getStdOut().writer().print("{any}\n", .{1 < 2 && 2 < 3 && 3 > 4 && boom()});
}
